# research-assistant

./: .gitignore  GOOGLE_SEARCH_SETUP.md  LANGCHAIN_AGENTS_GUIDE.md  README.md  TAVILY_SETUP.md  config.yaml  create_sample_pdf.py  projectDescription.md  pyproject.toml  requirements.legacy.txt  requirements.txt  setup_sample_pdf.py  verify_agent_setup.py  verify_setup.py
.streamlit/: config.toml  secrets.toml.example
Documentation/: AGENT_FEATURE_SUMMARY.md  CONVERSATIONAL_FEATURE_SUMMARY.md  LANGCHAIN_MEMORY_GUIDE.md  STREAMLIT_USER_GUIDE.md  TAVILY_INTEGRATION.md  TECHNICAL_DOCUMENTATION.md  agent_prompt_templates.md
app/: streamlit_app.py
app/components/: chat_interface.py  document_viewer.py  history_viewer.py  sidebar.py
app/utils/: __init__.py  state_manager.py  ui_helpers.py
data/vectorstore_test/: chroma.sqlite3
notebooks/: 01_document_processing.ipynb  02_text_splitting.ipynb  03_embeddings_test.ipynb  04_vectorstore_test.ipynb  05_full_pipeline_test.ipynb  retrieval_testing.ipynb
notebooks/data/vectorstore/: chroma.sqlite3
notebooks/data/vectorstore_pipeline_class_test/: chroma.sqlite3
src/: main.py
src/agent/: agent_config.py  research_agent.py
src/chains/: conversational.py  retrieval_qa.py
src/memory/: conversation_memory.py
src/processing/: document_loader.py  document_processing_pipeline.py  embeddings.py  text_splitter.py
src/tools/: base_tool.py  document_search.py  summarization.py  web_search.py
src/utils/: config.py  formatters.py  llm.py  prompts.py  session.py
src/vectorstore/: chroma_store.py
(+2 files in other folders)
