[project]
name = "research-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4==4.12.3",
    "chromadb==0.4.24",
    "duckduckgo-search==6.1.0",
    "groq>=0.9.0",
    "ipykernel==6.29.4",
    "jupyter==1.0.0",
    "langchain==0.1.20",
    "langchain-community==0.0.38",
    "langchain-groq==0.1.3",
    "numpy>=1.24.0,<2.0.0",
    "pypdf==4.2.0",
    "python-dotenv==1.0.1",
    "pyyaml==6.0.1",
    "requests==2.31.0",
    "sentence-transformers==2.7.0",
    "streamlit==1.34.0",
    "tiktoken==0.7.0",
    "torch==2.2.0",
    "tqdm==4.66.3",
    "watchdog==4.0.0",
]
