[project]
name = "research-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb==0.4.24",
    "groq>=0.9.0",
    "langchain==0.1.20",
    "langchain-community==0.0.38",
    "langchain-core==0.1.53",
    "langchain-groq==0.1.3",
    "langchain-text-splitters==0.0.2",
    "numpy>=1.24.0,<2.0.0",
    "pypdf==4.2.0",
    "python-dotenv==1.0.1",
    "pyyaml==6.0.1",
    "requests==2.31.0",
    "scikit-learn==1.8.0",
    "sentence-transformers==2.7.0",
    "streamlit==1.34.0",
    "tavily-python==0.7.21",
    "tiktoken==0.7.0",
    "torch==2.2.0",
    "tqdm==4.66.3",
    "watchdog==4.0.0",
]
